# SWB

./: .replit  RESTORE_ORIGINAL_PARAMS.md  config.ORIGINAL_BACKUP.py  config.py  main.py  pyproject.toml  replit.md
attached_assets/: Pasted---1761411609435_1761411609436.txt  Pasted--1-3-WebSocket-TCP-Binance-1--1761410739585_1761410739585.txt  Pasted--LSFP-15-Liquidation-Sweep-Fakeout-15m--1761410697853_1761410697854.txt  Pasted--venv-root-ubuntu-s-1vcpu-2gb-fra1-01-SWB-cat-env-USE-MOCK-DATA-false-TELEGRAM-BOT-TOKEN-8007-1761420212583_1761420212584.txt  Pasted--venv-root-ubuntu-s-1vcpu-2gb-fra1-01-SWB-grep-15m-candle-closed-root-SWB-bot-log-tail-20--1761425269711_1761425269711.txt  Pasted--venv-root-ubuntu-s-1vcpu-2gb-fra1-01-SWB-grep-A-30-4USDT-Sweep-detected-LONG-root-SWB-bot-1761430771300_1761430771300.txt  Pasted--venv-root-ubuntu-s-1vcpu-2gb-fra1-01-SWB-grep-A-30-XPINUSDT-Sweep-detected-SHORT-root-SWB-1761430704747_1761430704747.txt  Pasted--venv-root-ubuntu-s-1vcpu-2gb-fra1-01-SWB-grep-Sweep-check-root-SWB-bot-log-head-10-2025--1761429912526_1761429912527.txt  Pasted--venv-root-ubuntu-s-1vcpu-2gb-fra1-01-SWB-head-100-root-SWB-bot-log-2025-10-25-22-18-03-roo-1761420736112_1761420736112.txt  Pasted--venv-root-ubuntu-s-1vcpu-2gb-fra1-01-SWB-python-main-py-2025-10-25-22-20-45-root-INFO-Lo-1761420060160_1761420060160.txt  Pasted--venv-root-ubuntu-s-1vcpu-2gb-fra1-01-SWB-python-main-py-2025-10-25-22-39-36-root-INFO-Lo-1761421206760_1761421206761.txt  Pasted-1--1761411786666_1761411786667.txt  (+17 more)
src/binance/: __init__.py  data_provider.py  mock_provider.py  rate_limiter.py  (+3 more)
(+16 files in other folders)
